WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281225
REGRESSION(
284930@main
) New assertion triggered in API tests
https://bugs.webkit.org/show_bug.cgi?id=281225
Summary
REGRESSION(284930@main) New assertion triggered in API tests
Jonathan Bedard
Reported
2024-10-10 07:50:26 PDT
One of the new assertions added in
284930@main
is being triggered by TestWebKitAPI.Badging.APIWindow and TestWebKitAPI.Badging.ServiceWorkerOverride. History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&test=TestWebKitAPI.Badging.ServiceWorkerOverride&test=TestWebKitAPI.Badging.APIWindow
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-10 07:50:52 PDT
<
rdar://problem/137677600
>
Jonathan Bedard
Comment 2
2024-10-10 07:53:24 PDT
Stack trace: TestWebKitAPI.Badging.APIWindow ASSERTION FAILED: !m_routingArbitrator /Volumes/Data/worker/Apple-Sequoia-Debug-Build/build/Source/WebKit/UIProcess/WebProcessProxy.cpp(2260) : void WebKit::WebProcessProxy::enableMediaPlaybackIfNecessary() 1 0x17cb07da4 WebKit::WebProcessProxy::enableMediaPlaybackIfNecessary() 2 0x17caf88e8 WebKit::WebProcessProxy::updateSharedPreferencesForWebProcess(WebKit::WebPreferencesStore const&) 3 0x17c9bfa10 _ZZN6WebKit12WebPageProxy20preferencesDidChangeEvENK3$_0clINS_15WebProcessProxyEN3WTF23ObjectIdentifierGenericIN7WebCore18PageIdentifierTypeENS4_38ObjectIdentifierMainThreadAccessTraitsIyEEyLNS4_33SupportsObjectIdentifierNullStateE0EEEEEDaRT_T0_ 4 0x17c9bf981 WTF::Detail::CallableWrapper<WebKit::WebPageProxy::preferencesDidChange()::$_0, void, WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>::call(WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>) 5 0x17c8e27cf WTF::Function<void (WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>)>::operator()(WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>) const 6 0x17c8c6bb7 WebKit::WebPageProxy::forEachWebContentProcess(WTF::Function<void (WebKit::WebProcessProxy&, WTF::ObjectIdentifierGeneric<WebCore::PageIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>)>&&) 7 0x17c8b0d03 WebKit::WebPageProxy::preferencesDidChange() 8 0x17ca8f466 WebKit::WebPreferences::update() 9 0x17ca8f76f WebKit::WebPreferences::updateBoolValueForKey(WTF::String const&, bool, bool) 10 0x17e2004ca WebKit::WebPreferences::setAppBadgeEnabled(bool const&) 11 0x17bd0b24a -[WKPreferences(WKPrivate) _setAppBadgeEnabled:] 12 0x1037bb62d Badging_APIWindow_Test::TestBody() 13 0x1045dbecb void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 14 0x10458f59a void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 15 0x10458f4e3 testing::Test::Run() 16 0x104590502 testing::TestInfo::Run() 17 0x10459164c testing::TestSuite::Run() 18 0x1045a106c testing::internal::UnitTestImpl::RunAllTests() 19 0x1045e0d0b bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 20 0x1045a0a1a bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 21 0x1045a0905 testing::UnitTest::Run() 22 0x1037803c1 RUN_ALL_TESTS() 23 0x103780356 TestWebKitAPI::TestsController::run(int, char**) 24 0x104576373 main 25 0x7ff800f802cd start
Sihui Liu
Comment 3
2024-10-10 08:29:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34979
EWS
Comment 4
2024-10-10 08:46:59 PDT
Committed
284971@main
(2a5102d008a4): <
https://commits.webkit.org/284971@main
> Reviewed commits have been landed. Closing PR #34979 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug