REGRESSION(284930@main) New assertion triggered in API tests https://bugs.webkit.org/show_bug.cgi?id=281225 rdar://137677600

Reviewed by Ryosuke Niwa.

The assertion ensures m_routingArbitrator will not be created multiple times (i.e. media playback is not enabled
multiple times), so add an early return when media playback is already enabled.

* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::enableMediaPlaybackIfNecessary):

Canonical link: https://commits.webkit.org/284971@main